widget_derive/tests/ui/declare/declare_default_last_fail.rs
use ribir::prelude::*;

fn widget() -> BoxedWidget {
  declare! {
    BoxDecoration {
      ..<_>::default(),
      background: Some(Color::RED.into()),
    }
  }
}

fn main() {}
